[package]
name = "mockbanker"
version = "0.1.0"
edition = "2024"
authors = ["Tony Benoy <me@tonybenoy.com>"]
description = "Browser-based generator for valid test IBANs and personal ID codes — 96 countries, checksum-correct, runs entirely in WebAssembly"
license = "MIT"
repository = "https://github.com/tonybenoy/mockbanker"
keywords = ["iban", "test-data", "wasm", "personal-id", "generator"]
categories = ["wasm", "web-programming", "development-tools::testing"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
eu-test-data-generator = { git = "https://github.com/Sunyata-OU/EU-Test-Data-Generator.git", default-features = false }
